# faq-chatbot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  result.md
app/: main.py
app/config/: env_variable.py
app/config/container/: __init__.py  faq_container.py  milvus_container.py  open_ai_container.py
app/container/: faq_container.py  milvus_container.py
app/domain/base/: pydantic_base.py
app/domain/faq/dto/: question.py
app/domain/faq/repository/: faq_search_repository.py  question_history_repository.py
app/domain/faq/route/: faq_route.py
app/domain/faq/service/: faq_service.py
app/domain/llm/: open_ai_client.py
app/domain/llm/prompt/: question_promt.py
poc/: poc.ipynb
src/: app_module.py
src/config/: env_variable.py
src/domain/faq/: faq_controller.py  faq_module.py  faq_search_repository.py  faq_service.py  question.py  question_history_repository.py
src/domain/llm/: open_ai_client.py  open_ai_module.py
src/domain/llm/prompt/: question_promt.py
src/domain/milvus/: milvus_module.py  milvus_search_client.py
tests/: test_print_pkl.py
volumes/etcd/member/snap/: db
volumes/milvus/etcd/member/snap/: db
volumes/milvus/rdb_data/: 000016.sst  000028.sst  IDENTITY  LOG  LOG.old.1733483526943656  LOG.old.1733485221343187  MANIFEST-000017  MANIFEST-000029
volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  000032.sst  IDENTITY  LOG  LOG.old.1733483526901236  LOG.old.1733485221305898  MANIFEST-000016  MANIFEST-000028
volumes/minio/.minio.sys/: format.json
