[tool.poetry]
name = "faq-chatbot"
version = "0.1.0"
description = ""
authors = ["yuhyeongchan <gudcks305@gmail.com>"]
readme = "README.md"
packages = [{include = "faq_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
openai = "^1.56.2"
sentence-transformers = "^3.3.1"
chromadb = "^0.5.23"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
